-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for S Buisson <sbuisson@ddn.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/d5790b0a-ed8c-4e21-a5c3-6395565db7b7
test_69 failed with the following error:
trevis-102vm1 crashed during sanity-sec test_69
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/103999 - 4.18.0-513.18.1.el8_9.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/103999 - 4.18.0-513.18.1.el8_lustre.x86_64
Stack trace is:
[ 5405.670870] Lustre: DEBUG MARKER: /usr/sbin/lctl set_param sptlrpc.gss.rsi_upcall=prog [ 5405.802972] BUG: unable to handle kernel paging request at 00007ffe5b8cc009 [ 5405.805753] Oops: 0001 [#1] SMP PTI [ 5405.806391] CPU: 0 PID: 477214 Comm: lctl 4.18.0-513.18.1.el8_lustre.x86_64 #1 [ 5405.809262] RIP: 0010:string_nocheck+0x12/0x70 [ 5405.825615] Call Trace: [ 5405.830279] string+0x44/0x60 [ 5405.830811] vsnprintf+0x340/0x520 [ 5405.831437] libcfs_debug_msg+0x889/0xbc0 [libcfs] [ 5405.832428] ? upcall_cache_set_upcall+0x37e/0x3f0 [obdclass] [ 5405.834146] rsi_upcall_seq_write+0x2e5/0x390 [ptlrpc_gss] [ 5405.835291] proc_reg_write+0x39/0x60 [ 5405.836017] vfs_write+0xa5/0x1b0 [ 5405.836653] ksys_write+0x4f/0xb0 [ 5405.837245] do_syscall_64+0x5b/0x1b0
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-sec test_69 - trevis-102vm1 crashed during sanity-sec test_69
- is related to
-
LU-17718 Coverity: 424705 (String overflow) under upcall_cache.c
-
- Resolved
-